--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,4 +1,10 @@
 @font-face {
+    font-family: 'Merriweather';
+    src: url('../../public/fonts/Merriweather-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
     font-family: 'Inter';
     src: url('../../public/fonts/Inter-Regular.ttf') format('truetype');
     font-weight: 400;
