--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,7 @@
 body {
-  background-color: #111111;
+  background-color: white;
   margin: 0;
   overflow-x: hidden;
-  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
