--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -5,6 +5,12 @@
     font-style: normal;
 }
 @font-face {
+    font-family: 'Merriweather';
+    src: url('../../public/fonts/Merriweather-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
     font-family: 'Inter';
     src: url('../../public/fonts/Inter-Regular.ttf') format('truetype');
     font-weight: 400;
