--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,5 +3,10 @@
     font-weight: 400;
     font-size: 14px;
     text-align: right;
-    width: 50vw;
+    margin-left: 20vw;
+}
+
+.about__mobileContent {
+    font-size: 13px;
+    margin-left: 15vw;
 }
