--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,7 +64,7 @@
   flex: 1;
   margin: 25px;
   padding: 25px;
-  border: 1px solid #aaaaaa;
+  border: 1px solid rgba(255, 42, 0, 0.3);
   border-radius: 10px;
   cursor: default;
   overflow-y: scroll;
@@ -82,8 +82,8 @@
 }
 
 .link:hover {
-  color: #cccccc;
-  fill: #cccccc;
+  color: #ff2a00;
+  fill: #ff2a00;
 }
 
 .title {
