--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,54 +12,6 @@
   height: 86vh;
 }
 
-.background {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.mobileBackground {
-  height: 86vh;
-}
-
-.header {
-  width: 20vw;
-  margin-left: 40px;
-  margin-top: 40px;
-  text-align: left;
-  cursor: default;
-}
-
-.mobileHeader {
-  width: 80vw;
-  margin-left: 20px;
-  margin-top: 25px;
-  margin-bottom: 0px;
-  text-align: left;
-}
-
-.mobileMenu {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-}
-
-.menuLinkText {
-  font-family: 'Inter';
-  font-weight: 600;
-  font-size: 14px;
-  text-decoration: none;
-  color: black;
-}
-
-.mobileMenuLinkText {
-  font-size: 13px;
-  margin-right: 35px;
-}
-
 .content {
   flex: 1;
   margin: 25px;
@@ -101,4 +53,21 @@
 
 .newtabicon {
   margin: 0px 0px 0px 3px;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: all 2000ms cubic-bezier(0.1, 0.4, 0.2, 1);
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
 }
